--- a/FRONTEND/index.html
+++ b/FRONTEND/index.html
@@ -18,7 +18,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <link rel="stylesheet" href="mystyle.css">
+    <link rel="stylesheet" href="./styles/mystyle.css">
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
