Expense App features

--- a/FRONTEND/index.html
+++ b/FRONTEND/index.html
@@ -32,7 +32,7 @@
     <div class="container-fluid p-0">
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-              <a class="navbar-brand" href="http://localhost:5500/FRONTEND/signup.html">
+              <a class="navbar-brand" href="http://localhost:5500/FRONTEND/components/Layout/login.html">
                 <img src="./public/Expense Icon.png" alt="Logo" width="10%" height="10%" class="img-fluid rounded mt-1">
                 <p class="fs-4 fw-bold text-light d-inline-block align-text-top m-1">Expense Tracker</p>
               </a>
@@ -41,7 +41,7 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <div class="me-auto mb-2 mb-lg-0"></div> <!--class="me-auto mb-2 mb-lg-0"-->
-                <a class="btn btn-light text-light" href="http://localhost:5500/FRONTEND/signup.html" role="button">Login</a>
+                <a class="btn btn-light text-light" href="http://localhost:5500/FRONTEND/components/Layout/login.html" role="button">Login</a>
               </div>
             </div>
           </nav>
